--- a/src/components/avon-header/top-bar/top-bar.scss
+++ b/src/components/avon-header/top-bar/top-bar.scss
@@ -1,3 +1,5 @@
+@import '~design-web-components/scss/variables';
+
 :host {
   display: block;
   width: 100%;
@@ -10,6 +12,11 @@
     justify-content: space-between;
     width: 100%;
     margin: 0 auto;
+
+    &-link {
+      font-size: 10px;
+      color: $c-text;
+    }
 
     .rep {
       display: flex;
