--- a/src/components/bottom-navigation/bottom-navigation.scss
+++ b/src/components/bottom-navigation/bottom-navigation.scss
@@ -1,7 +1,12 @@
 @import '~design-web-components/scss/variables';
+@import '~design-web-components/scss/mixins';
 
 :host {
   display: block;
+
+  @include for-desktop {
+    display: none;
+  }
 
   .navigation-bottom {
     box-sizing: border-box;
@@ -13,10 +18,31 @@
     justify-content: space-around;
     align-items: flex-end;
     width: 100%;
-    height: 3.75rem;
-    padding: $spacer-sm;
+    padding: 0 $spacer-sm;
     background: $c-white;
     box-shadow: 0 -2px 10px rgba($c-background-two, 0.15);
+  }
+
+  .label {
+    padding-top: $spacer-2xs;
+    font-size: 12px;
+  }
+
+  .link {
+    text-align: center;
+    font-size: 12px;
+    color: $c-text;
+  }
+
+  .item {
+    background: transparent;
+    border: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: $spacer-xs;
+    color: $c-primary;
   }
 
   .bottom-cart {
