--- a/src/components/ui-modal/ui-modal.scss
+++ b/src/components/ui-modal/ui-modal.scss
@@ -10,13 +10,22 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: gray;
-  opacity: 0;
-  visibility: hidden;
-  transform: scale(1.1);
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-  z-index: 1;
+  z-index: 2;
+
+  &:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+    background: rgba(0, 0, 0, 0.5);
+  }
 }
+
 .visible {
   opacity: 1;
   visibility: visible;
