remove cart item

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -13,6 +13,7 @@ $text-primary: #546264;
 $text-secondary: #999;
 $font-size--sm: 0.875rem;
 $font-size--base: 1rem;
+$font-weight--small: 100;
 $font-weight--medium: 500;
 
 $spacer-2xs: 0.25rem; // 4px
