--- a/src/components/ui-button/ui-button.scss
+++ b/src/components/ui-button/ui-button.scss
@@ -142,7 +142,7 @@
   &.text {
     font-weight: normal;
     background: transparent;
-    color: $c-text;
+    color: var(--c-button-text, $c-text);
     display: inline;
     padding: 0;
     border: none;
