--- a/src/components/ui-modal/ui-modal.scss
+++ b/src/components/ui-modal/ui-modal.scss
@@ -1,4 +1,5 @@
 @import 'scss/variables';
+@import 'scss/mixins';
 
 :host {
   display: block;
@@ -10,7 +11,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 3;
 
   &:before {
     content: ' ';
@@ -20,8 +21,6 @@
     top: 0;
     left: 0;
     right: 0;
-    transform: scale(1.1);
-    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
     background: rgba(0, 0, 0, 0.5);
   }
 }
@@ -29,15 +28,14 @@
 .visible {
   opacity: 1;
   visibility: visible;
-  transform: scale(1);
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 .modal {
-  font-family: Helvetica;
+  font-family: $font-family;
   font-size: 14px;
   padding: 10px 10px 5px 10px;
   background-color: #fff;
   border-radius: 2px;
+  box-sizing: border-box;
 }
 .center {
   position: absolute;
@@ -49,11 +47,21 @@
   position: fixed;
   left: 0;
   height: 100%;
+  width: 100%;
+
+  @include for-desktop {
+    width: var(--sidebar-width, 25.5rem);
+  }
 }
 .right {
   position: fixed;
   right: 0;
   height: 100%;
+  width: 100%;
+
+  @include for-desktop {
+    width: var(--sidebar-width, 25.5rem);
+  }
 }
 .top {
   position: fixed; /* Stay in place */
