--- a/src/components/avon-header/desktop-menu/desktop-menu.scss
+++ b/src/components/avon-header/desktop-menu/desktop-menu.scss
@@ -23,6 +23,10 @@
     &__logo {
       display: flex;
       align-items: center;
+
+      &Image {
+        height: 2.125rem;
+      }
     }
 
     &-actions {
