--- a/src/components/ui-modal/ui-modal.scss
+++ b/src/components/ui-modal/ui-modal.scss
@@ -85,6 +85,7 @@
 .button-container {
   display: flex;
   position: absolute;
+  flex-direction: column;
   bottom: 20px;
   width: 100%;
   box-sizing: border-box;
