--- a/src/components/avon-header/search-bar/search-bar.scss
+++ b/src/components/avon-header/search-bar/search-bar.scss
@@ -1,5 +1,5 @@
-@import 'scss/variables';
-@import 'scss/mixins';
+@import '~design-web-components/scss/variables';
+@import '~design-web-components/scss/mixins';
 
 :host {
   display: block;
