--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -1,5 +1,7 @@
 @import 'variables', 'mixins';
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 :root {
   @include vars;
 }
