codecleanup for initial commit

--- a/src/components/avon-header/search-bar/search-bar.scss
+++ b/src/components/avon-header/search-bar/search-bar.scss
@@ -1,5 +1,5 @@
-@import 'design-web-components/scss/variables';
-@import 'design-web-components/scss/mixins';
+@import '../../../../scss/variables';
+@import '../../../../scss/mixins';
 
 :host {
   display: block;
