--- a/src/components/avon-header/avon-header.scss
+++ b/src/components/avon-header/avon-header.scss
@@ -1,5 +1,5 @@
-@import 'design-web-components/scss/variables';
-@import 'design-web-components/scss/mixins';
+@import '../../../scss/variables.scss';
+@import '../../../scss/mixins.scss';
 
 :host {
   display: block;
